Corrected image file path

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -243,7 +243,7 @@ select {
   right: 0.5rem;
   top: 0.75rem;
   background: transparent;
-  background-image: url(../photographer/imgs/hamburger.png);
+  background-image: url(imgs/hamburger.png);
   background-repeat: no-repeat;
   background-position: center;
   width: 2rem;
@@ -269,7 +269,7 @@ select {
 }
 
 .mobile-nav-toggle[aria-expanded=true] {
-  background-image: url(../photographer/imgs/close.png);
+  background-image: url(imgs/close.png);
 }
 
 .mobile-nav-toggle:focus-visible {
